track lastActiveWindows for OnAllActivities layout

--fix the typo that identifies when a view in present
OnAllActivities, {0} that is.

BUG:431763